--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
+    "sharp": "^0.34.1",
     "uuid": "^11.1.0"
   },
   "name": "backend",
