--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,11 @@
     "@tensorflow/tfjs": "^4.11.0",
     "@types/three": "^0.158.0",
     "axios": "^1.6.2",
+    "canvas-confetti": "^1.9.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^10.18.0",
     "gsap": "^3.13.0",
+    "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
@@ -32,6 +35,7 @@
     "react-type-animation": "^3.2.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^6.1.17",
     "swiper": "^11.0.5",
     "three": "^0.158.0"
   },
