--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,10 @@
     "clean": "rimraf node_modules .vite dist"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.2.5",
+    "@fontsource/montserrat": "^5.2.5",
+    "@fontsource/playfair-display": "^5.2.5",
+    "@fontsource/roboto": "^5.2.5",
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.5",
     "@react-three/drei": "^9.122.0",
@@ -18,11 +22,13 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@tensorflow/tfjs": "^4.11.0",
     "@types/three": "^0.158.0",
+    "ar.js": "^2.2.2",
     "axios": "^1.6.2",
     "canvas-confetti": "^1.9.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^10.18.0",
     "gsap": "^3.13.0",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
@@ -33,6 +39,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-type-animation": "^3.2.0",
+    "react-webcam": "^7.2.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^6.1.17",
@@ -44,14 +51,14 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.4.31",
+    "postcss": "^8.5.3",
     "rimraf": "^5.0.5",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.0.2"
   },
   "resolutions": {
