--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.175",
