--- a/client/.env
+++ b/client/.env
@@ -4,3 +4,4 @@ VITE_FIREBASE_PROJECT_ID= driftx-otp
 VITE_FIREBASE_STORAGE_BUCKET= driftx-otp.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID= 857418037750
 VITE_FIREBASE_APP_ID= 1:857418037750:web:04c488a38a9be20fbd2fd7
+REACT_APP_PAYPAL_CLIENT_ID= AQjVtkZzBStU-Gi4bo61Wl03TYdv4ealSjvPAYh-CYK-0GuAGDT6l4qq3hKMXX_3rcQSHG4jeofox6lq
