--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,9 @@
     "openai": "^4.96.0",
     "redis": "^5.1.0",
     "sharp": "^0.34.1",
-    "uuid": "^11.1.0"
+    "socket.io": "^4.8.1",
+    "uuid": "^11.1.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "jest": "^29.7.0"
