--- a/client/package.json
+++ b/client/package.json
@@ -34,16 +34,20 @@
     "lottie-react": "^2.4.1",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.175",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "react-speech-kit": "^3.0.1",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
     "react-webcam": "^7.2.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.17",
     "swiper": "^11.0.5",
     "three": "^0.158.0"
