--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,23 @@
   "dependencies": {
     "@apollo/server": "^4.10.0",
     "@graphql-tools/schema": "^10.0.2",
+    "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "graphql": "^16.8.1",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.14.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.15.0",
+    "multer": "^2.0.0",
+    "node-cron": "^4.0.7",
+    "sharp": "^0.34.2",
+    "socket.io": "^4.8.1",
+    "winston": "^3.17.0",
     "ws": "^8.16.0"
   },
   "devDependencies": {
