--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "clean": "rimraf node_modules .vite dist"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@fontsource/inter": "^5.2.5",
     "@fontsource/montserrat": "^5.2.5",
     "@fontsource/playfair-display": "^5.2.5",
@@ -29,6 +30,8 @@
     "express-rate-limit": "^7.5.0",
     "firebase": "^11.8.1",
     "framer-motion": "^10.18.0",
+    "graphql": "^16.11.0",
+    "graphql-ws": "^6.0.5",
     "gsap": "^3.13.0",
     "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
@@ -36,12 +39,15 @@
     "react-colorful": "^5.6.1",
     "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.4.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.175",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-speech-kit": "^3.0.1",
+    "react-spring": "^10.0.1",
     "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
     "react-webcam": "^7.2.0",
