--- a/client/package.json
+++ b/client/package.json
@@ -11,61 +11,73 @@
     "clean": "rimraf node_modules .vite dist"
   },
   "dependencies": {
-    "@fontsource/inter": "^5.2.5",
-    "@fontsource/montserrat": "^5.2.5",
-    "@fontsource/playfair-display": "^5.2.5",
-    "@fontsource/roboto": "^5.2.5",
+    "@apollo/client": "^3.8.10",
+    "@fontsource/inter": "^5.0.16",
+    "@fontsource/montserrat": "^5.0.16",
+    "@fontsource/playfair-display": "^5.0.16",
+    "@fontsource/roboto": "^5.0.16",
     "@react-spring/parallax": "^9.7.3",
-    "@react-spring/web": "^9.7.5",
-    "@react-three/drei": "^9.122.0",
-    "@react-three/fiber": "^8.18.0",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@tensorflow/tfjs": "^4.11.0",
-    "@types/three": "^0.158.0",
+    "@react-spring/web": "^9.7.3",
+    "@react-three/drei": "^9.92.7",
+    "@react-three/fiber": "^8.15.12",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@tensorflow/tfjs": "^4.17.0",
+    "@types/three": "^0.158.2",
     "ar.js": "^2.2.2",
     "axios": "^1.6.2",
-    "canvas-confetti": "^1.9.3",
-    "date-fns": "^4.1.0",
+    "canvas-confetti": "^1.9.2",
+    "date-fns": "^2.30.0",
+    "express-rate-limit": "^7.1.5",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.18.0",
-    "gsap": "^3.13.0",
+    "graphql": "^16.8.1",
+    "graphql-ws": "^5.15.0",
+    "gsap": "^3.12.4",
     "lodash": "^4.17.21",
-    "lottie-react": "^2.4.1",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.0.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-intersection-observer": "^9.16.0",
+    "react-intersection-observer": "^9.5.3",
     "react-parallax-tilt": "^1.7.175",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.0",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.1",
+    "react-speech-kit": "^3.0.1",
+    "react-spring": "^9.7.3",
+    "react-toastify": "^9.1.3",
     "react-type-animation": "^3.2.0",
     "react-webcam": "^7.2.0",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "styled-components": "^6.1.17",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0",
+    "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.5",
     "three": "^0.158.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.22.15",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.54.0",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "postcss": "^8.5.3",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.33",
     "rimraf": "^5.0.5",
-    "tailwindcss": "^3.4.17",
-    "vite": "^5.0.2"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.12"
   },
   "resolutions": {
     "@react-three/drei/@types/three": "0.158.0",
     "three": "0.158.0",
-    "@tensorflow/tfjs-core": "4.11.0",
-    "@tensorflow/tfjs-backend-webgl": "4.11.0",
-    "@tensorflow/tfjs-data": "4.11.0"
+    "@tensorflow/tfjs-core": "4.17.0",
+    "@tensorflow/tfjs-backend-webgl": "4.17.0",
+    "@tensorflow/tfjs-data": "4.17.0"
   }
 }
