--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "clean": "rimraf node_modules .vite dist"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@fontsource/inter": "^5.2.5",
     "@fontsource/montserrat": "^5.2.5",
     "@fontsource/playfair-display": "^5.2.5",
@@ -32,16 +33,23 @@
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.4.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
     "react-parallax-tilt": "^1.7.175",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
+    "react-speech-kit": "^3.0.1",
+    "react-spring": "^10.0.1",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
     "react-webcam": "^7.2.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.17",
     "swiper": "^11.0.5",
     "three": "^0.158.0"
@@ -59,6 +67,7 @@
     "postcss": "^8.4.33",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.39.2",
     "vite": "^5.0.12"
   },
   "resolutions": {
